--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^</p>
+        <p> <a href="./book/book_0120.html">120. 세상의 모든 법칙</a> </p>
         <p> <a href="./book/book_0119.html">119. 너도 작가가 되고 싶니?</a> </p>
         <p> <a href="./book/book_0118.html">118. 무조건 당신편</a> </p>
         <p> <a href="./book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a> </p>
