--- a/book/book_0120.html
+++ b/book/book_0120.html
@@ -41,23 +41,23 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="세상의-모든-법칙">세상의 모든 법칙</h1>
-<p>출판사:서울문화사, 기획:EBS미디어, 지은이:EBS &lt;세상의 모든 법칙&gt; 제작티</p>
+<p>초판 1쇄 2018.09.12, 출판사:서울문화사, 기획:EBS미디어, 지은이:EBS &lt;세상의 모든 법칙&gt; 제작팀</p>
 <br>
 <h3 id="1장-사랑과-관계의-법칙"><strong>1장 사랑과 관계의 법칙</strong></h3>
 <ul>
 <li>자이가르닉 효과(Zeigarnik effect) : 어떤 일을 끝마치지 못하고 중간에 그만두면 긴장상태가 지속되어 마음속에 계속 떠오르는 심리적 현상 (첫사랑)</li>
 <li>침묵의 나선 이론(the spiral of silence theory) : 자신의 생각이 우세한 여론과 일치하면 적극적으로 표현하고, 소수일 경우에는 침묵</li>
-<li>고슴도치 딜레마() : 친밀한 관계를 형성하고 싶어도 피치 못할 이유 때문에 피하게 되는 인간관계의 어려움을 나타내는 말</li>
-<li>뮌하우젠 증후군 : 다른 사람들의 관심을 끌기 위해 아프다고 거짓말을 하거나 자해를 하는 일종의 정신 질환 (관심병)</li>
-<li>후광 효과 : 어떤 대상이나 사람의 긍정적인 특성이 그 대상이나 사람의 다른 특성을 평가하는 데 영향을 미치는 것</li>
-<li>밴드왜건 효과 : 대중이 자신의 판단보다는 많은 사람들의 판단에 따라 행동하는 현상 / 선거에서 대세를 잡은 후보쪽으로 유권자들이 동아서는 현상</li>
-<li>카멜레온 효과 : 상대방의 행동과 표정을 무의식중에 따라하거나 자신의 행동을 닮은 사람을 더 신뢰하는 현상</li>
-<li>언더독 효과 : 경쟁에서 뒤지는 약자가 성공하거나 강자를 이기기를 바라는 심리적 현상</li>
+<li>고슴도치 딜레마(hedgehog's delemma) : 친밀한 관계를 형성하고 싶어도 피치 못할 이유 때문에 피하게 되는 인간관계의 어려움을 나타내는 말</li>
+<li>뮌하우젠 증후군(... sndrome) : 다른 사람들의 관심을 끌기 위해 아프다고 거짓말을 하거나 자해를 하는 일종의 정신 질환 (관심병)</li>
+<li>후광 효과(halo effect) : 어떤 대상이나 사람의 긍정적인 특성이 그 대상이나 사람의 다른 특성을 평가하는 데 영향을 미치는 것</li>
+<li>밴드왜건 효과(bandwagon effect) : 대중이 자신의 판단보다는 많은 사람들의 판단에 따라 행동하는 현상 / 선거에서 대세를 잡은 후보쪽으로 유권자들이 동아서는 현상</li>
+<li>카멜레온 효과(chameleon effect) : 상대방의 행동과 표정을 무의식중에 따라하거나 자신의 행동을 닮은 사람을 더 신뢰하는 현상</li>
+<li>언더독 효과(underdog effect) : 경쟁에서 뒤지는 약자가 성공하거나 강자를 이기기를 바라는 심리적 현상</li>
 <li>안아주기 효과 : 포옹을 하면 옥시토신 호르몬이 분비돼 몸이 편안해지는 것</li>
-<li>연애 포지티브 현상 : 애인이 있는 사람은 긍정적이고 좋은 성격이지만, 애인이 없는 사람은 부정적이고 나쁜 성격이라고 생각하는 현상</li>
-<li>머레이비언의 법칙 : 사람 간의 의사소통에서 언어적인 요소만큼이나 비언어적인 요소가 중요하다는 것</li>
-<li>행위자-관찰자 편향 (actor-observer bias) : 자신의 잘못하는 것은 주변 상황 때문이고 다른 사람이 잘못하는 것은 그 사람 자신의 문제라고 판단하는 인간의 이중 논리</li>
-<li>로미오와 줄리엣 효과 (Romeo &amp; Jullet effect) : 부모의 반대나 주위의 장애가 연인들의 사람을 더 깊게 만드는 것으로 심리적 반발의 일종</li>
+<li>연애 포지티브 현상(positive illusions in romantic relationships) : 애인이 있는 사람은 긍정적이고 좋은 성격이지만, 애인이 없는 사람은 부정적이고 나쁜 성격이라고 생각하는 현상</li>
+<li>머레이비언의 법칙(the law of Mehrabian) : 사람 간의 의사소통에서 언어적인 요소만큼이나 비언어적인 요소가 중요하다는 것</li>
+<li>행위자-관찰자 편향(actor-observer bias) : 자신의 잘못하는 것은 주변 상황 때문이고 다른 사람이 잘못하는 것은 그 사람 자신의 문제라고 판단하는 인간의 이중 논리</li>
+<li>로미오와 줄리엣 효과(Romeo &amp; Jullet effect) : 부모의 반대나 주위의 장애가 연인들의 사람을 더 깊게 만드는 것으로 심리적 반발의 일종</li>
 <li>샤덴프로이데(schadenfreude) : 남의 불행이나 고통을 보면서 느끼는 기쁨</li>
 <li>드 콜레랑보 증후군(~ syndrome) : 사회, 경제적으로 자신보다 높은 지위에 있는 사람이 자신을 사랑한다고 믿능 망상</li>
 </ul>
