--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -106,7 +106,7 @@
 </li>
 <li>
 <ol start="139">
-<li>주식은 분명히 가치를 지닙니다. 그러느 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.</li>
+<li>주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.</li>
 </ol>
 </li>
 <li>
@@ -121,7 +121,7 @@
 </li>
 <li>
 <ol start="147">
-<li>안전만진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념</li>
+<li>안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념</li>
 </ol>
 </li>
 <li>
@@ -171,17 +171,17 @@
 </li>
 <li>
 <ol start="177">
-<li>공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평규보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함</li>
+<li>공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함</li>
 </ol>
 </li>
 <li>
 <ol start="179">
-<li>시장 전체를 추종하는 투자를 현쟁의 용어로 수동적 투자자</li>
+<li>시장 전체를 추종하는 투자를 현재의 용어로 수동적 투자자</li>
 </ol>
 </li>
 <li>
 <ol start="181">
-<li>투자자들에게 '제발 아래도 좀 보라'고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)</li>
+<li>투자자들에게 **'제발 아래도 좀 보라'**고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)</li>
 </ol>
 </li>
 </ul>
@@ -207,7 +207,7 @@
 <li><strong>레슨3. 능력 범위</strong></li>
 <li>
 <ol start="270">
-<li>본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깉이 공부하고 집중투자했습니다.</li>
+<li>본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깊이 공부하고 집중투자했습니다.</li>
 </ol>
 </li>
 <li>
@@ -222,12 +222,12 @@
 </li>
 <li>
 <ol start="282">
-<li>배우자와 결혼해서 그려 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.</li>
+<li>배우자와 결혼해서 그를 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.</li>
 </ol>
 </li>
 <li>
 <ol start="283">
-<li>차트투자자와 대조하여 펀덜멘탈리스트라고 함</li>
+<li>차트투자자와 대조하여 펀드멘탈리스트라고 함</li>
 </ol>
 </li>
 <li>
@@ -237,7 +237,7 @@
 </li>
 <li>
 <ol start="290">
-<li>조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 걸을 경계</li>
+<li>조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 것을 경계</li>
 </ol>
 </li>
 <li>
@@ -259,7 +259,7 @@
 </li>
 <li>
 <ol start="330">
-<li>주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대쳥이 됨)</li>
+<li>주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대칭이 됨)</li>
 </ol>
 </li>
 <li>캡(뚜껑)이 씌워진 주식 (저상장주, 자산주)</li>
