--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     <div> 
         <h3>Docu</h3>
         <p> <a href="./docu/docu_0011.html">0011. 메가스터디, 손주은, 삼프로TV </a> </p>
+        <p> <a href="./docu/docu_0012.html">0012. KBS 새해맞이 특별강연. 문화심리학자 김정운 </a> </p>
         <br>
         <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
         <p> <a href="./docu/docu_0002.html">0002. 시험 (EBS 다큐프라임) (18.06.06) </a> </p>
@@ -226,6 +227,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^</p>
+        <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
         <p> <a href="./book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
         <p> <a href="./book/book_0121.html">121. 거인의 어깨 1</a> </p>
         <p> <a href="./book/book_0120.html">120. 세상의 모든 법칙</a> </p>
