--- a/book/book_0049.html
+++ b/book/book_0049.html
@@ -78,4 +78,11 @@
     <p data-ke-size="size16">새빨갛게 물들어 있을 것 같은 달콤한 빨강</p>
     <p data-ke-size="size16">빨-깡, 하고 말만 해도</p>
     <p data-ke-size="size16">세상이 온통 빨개질 것 같은 끈적끈적한 빨강</p>
+
+    <br>
+    <h3 id="시"><strong>시</strong></h3>
+    <p> <a href="./book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
+    <p> <a href="./book_0054.html">054. 백석, 외롭고 높고 쓸쓸한</a> </p>
+    <p> <a href="./book_0049.html">049. 난 빨강</a> </p>
+
 </body>
