--- a/book/book_0054.html
+++ b/book/book_0054.html
@@ -32,4 +32,11 @@
     <p data-ke-size="size16">지아비를 돗아오지 않고 어린 딸은 도라지꽃이 좋아 돌무덤으로 갔다</p>
     <p data-ke-size="size16">산뀡도 섧게 울은 슬픈 날이 있었다</p>
     <p data-ke-size="size16">산절의 마당위에 여인의 머리오리가 눈물방울과 같이 떨어지 날이 있었다</p>
+
+    <br>
+    <h3 id="시"><strong>시</strong></h3>
+    <p> <a href="./book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
+    <p> <a href="./book_0054.html">054. 백석, 외롭고 높고 쓸쓸한</a> </p>
+    <p> <a href="./book_0049.html">049. 난 빨강</a> </p>
+        
 </body>
