--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         <br>
         <p> 주제별</p>
         <p> <a href="./book/book_psychology.html">심리학</a> </p>
+        <p> <a href="./book/book_poem.html">시</a> </p>
         <br>
         <p> W 06.11 책15(100~114)</p>
         <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a> </p>
