거인의어깨 2

--- a/book/book_0123.html
+++ b/book/book_0123.html
@@ -95,12 +95,45 @@
 <br>
 <h3 id="12-피셔-한-가지-발차기"><strong>12. 피셔, 한 가지 발차기</strong></h3>
 <p>276 성장주 집중투자</p>
+<ul>
+<li>276 시장의 하락에도 바틸 수 있을 것 같은 안전한 종목을 매수했고, 폭락을 함께 맞았습니다. (스스로 폭락을 예고했으나 피해가지 못함)</li>
+<li>277 버핏이 선호하는 판매가격 인상으로 이익 개선보다는 공정개선과 혁신적인 신제품으로 이익을 늘려가는 회사를 선호</li>
+<li>279 '위대한 기업에 투자하라' : 1) 어떤 주식을 살 것인가?  2) 어떻게 찾아낼 것인가?  3) 어떻게 사고 팔 것인가?</li>
+<li>279 기업의 수명은 한정되어 있지 않기 때문에 뛰어난 기업이라면 그 성장 한계를 함부로 재단할 수 없다</li>
+</ul>
 <p>280 레슨 1. 기업의 성장은 무한하다</p>
+<ul>
+<li>284 매크로에 대한 두려움 때문에 이른 시기에 주식을 팔어버리는 우를 범할 수 있습니다 (어디로 도망갈 것이며, 언제 다시 살 것이가라는 질문에 답하기 어렵다)</li>
+<li>289 위대한 기업의 PER은 미래의 순이익을 할인해서 판단할 수 없다 (차세대 먹기리를 찾고 있는 것을 감안하지 못함)</li>
+<li>289 최소한의 영업이익도 없이 미래만을 창조하는 기업은 피셔의 기준에서 투자대상이 아님</li>
+</ul>
 <p>292 레슨 2. 위대한 기업이 위대한 주식이 되는 마법</p>
+<ul>
+<li>292 위대한 기업을 찾는 15가지 기준
+<ul>
+<li>거시경제 환경, 산업의 사이클, 경쟁 강도, 재무제표의 세부항목들은 빠져있음</li>
+<li>회사의 정책 7가지, 경영진 7가지, 노사관계 1가지</li>
+<li>거시경제나 재무제표는 보긴 보되 주안점이 아니다</li>
+</ul>
+</li>
+<li>311 현 시점의 예측의 한계를 명확히 인정
+<ul>
+<li>T0시점에서 T3이후의 시점의 전망까지 모두 당겨와서 높은 프리미엄을 정당화하려는 움직임을 보인다면 비중을 줄일 시기</li>
+</ul>
+</li>
+</ul>
 <p>317 레슨 3. 사야 할 때, 팔지 말아야 할 때</p>
+<ul>
+<li>323 팔아어 할 때 (3)
+<ul>
+<li>내가 잘못 판단한 것으로 확인되었을 때 / 회사가 더 이상 훌륭하지 않아졌을 때 : 현 시점에서 다시 판다하고 제재고 필요</li>
+<li>더 좋은 기회를 발견 : 교차매매, 쉽지 않음</li>
+</ul>
+</li>
+</ul>
 <p>333 사실 수집에 대하여</p>
 <p>338 다시, 여기서 그만두셔도 됩니다</p>
-<p>342 투자자의 서재</p>
+<p>342 투자와 투기를 나누는 기준 : 배팅비율의 차이</p>
 
         
         
