거인의어깨1 목차추가

--- a/book/book_0123.html
+++ b/book/book_0123.html
@@ -126,7 +126,7 @@
 <ul>
 <li>323 팔아어 할 때 (3)
 <ul>
-<li>내가 잘못 판단한 것으로 확인되었을 때 / 회사가 더 이상 훌륭하지 않아졌을 때 : 현 시점에서 다시 판다하고 제재고 필요</li>
+<li>내가 잘못 판단한 것으로 확인되었을 때 / 회사가 더 이상 훌륭하지 않아졌을 때 : 현 시점에서 다시 판다하고 재고 필요</li>
 <li>더 좋은 기회를 발견 : 교차매매, 쉽지 않음</li>
 </ul>
 </li>
