--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -50,11 +50,17 @@
 <li>위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가</li>
 </ol>
 </li>
+</ul>
+<h3 id="01-주식-이-특이한-자산">01. 주식, 이 특이한 자산</h3>
+<ul>
 <li>
 <ol start="26">
 <li>자산배분에서 주식을 제외하는 것은 엄청나게 위험합니다</li>
 </ol>
 </li>
+</ul>
+<h3 id="02-창의성과-정직함">02. 창의성과 정직함</h3>
+<ul>
 <li>
 <ol start="45">
 <li>앞으로 얼마의 시간이 흐르든 주식과 같은 자산이 다른 자산군보다 압도적인 승자가 될 것으로 믿습니다. 더 중요한 사실은 이쪽이 훨씬 더 안전하다는 점입니다</li>
@@ -65,16 +71,26 @@
 <li>주식은 보유 기간이 길어질수록 변동성이 줄어드는 아주 특이한 자산</li>
 </ol>
 </li>
+</ul>
+<h3 id="03-항상-괴로운-투자자">03. 항상 괴로운 투자자</h3>
+<ul>
 <li>
 <ol start="63">
 <li>이게 얼마짜리인지를 아무도 모른다</li>
 </ol>
 </li>
+</ul>
+<h3 id="04-여기서-그만두셔도-됩니다">04. 여기서 그만두셔도 됩니다</h3>
+<ul>
 <li>
 <ol start="91">
 <li>맞서 싸워야 할 적은 시장이 아니라 내 마음 속의 조급함입니다</li>
 </ol>
 </li>
+</ul>
+<br>
+<h3 id="05-어서-오게-인간">05. 어서 오게 인간</h3>
+<ul>
 <li>
 <ol start="104">
 <li>중요한 건 재료가 아니라 투자자의 머릿속에서 무엇을 상상하는가입니다</li>
@@ -88,12 +104,17 @@
 </ul>
 <br>
 <h3 id="06-그레이엄-여전히-너무나-저평가된"><strong>06. 그레이엄, 여전히 너무나 저평가된</strong></h3>
+<p>119 성과를 보자</p>
 <ul>
 <li>
 <ol start="123">
 <li>벤자민 그레이엄은 신화시대에서 역사시대로 넘어오는 과정에서 독보적인 성과를 내면서 살아남았다</li>
 </ol>
 </li>
+</ul>
+<p>125 배울 수 있는가</p>
+<p>131 레슨1. 주식은 사업에 대한 소유권</p>
+<ul>
 <li>
 <ol start="131">
 <li>주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다</li>
@@ -104,6 +125,9 @@
 <li>주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 가회일 뿐입니다</li>
 </ol>
 </li>
+</ul>
+<p>139 레슨2 미스터마켓</p>
+<ul>
 <li>
 <ol start="139">
 <li>주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.</li>
@@ -119,14 +143,20 @@
 <li>사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다</li>
 </ol>
 </li>
+</ul>
+<p>143 레슨3. 안전마진</p>
+<ul>
 <li>
 <ol start="147">
 <li>안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념</li>
 </ol>
 </li>
+</ul>
+<p>152 오해1. 가치주</p>
+<ul>
 <li>
 <ol start="152">
-<li>오해1. 가치주. 저PER 주식을 사야한다</li>
+<li>저PER 주식을 사야한다</li>
 </ol>
 </li>
 <li>
@@ -149,6 +179,9 @@
 <li>개정판이 나올 때마다 이전에 제안했던 공식을 버리고 새로운 공식으로 그 자리를 대체했습니다. (수많은 사람이 따라하면 오래가지 못함)</li>
 </ol>
 </li>
+</ul>
+<p>163 오해2. 가격은 가치에 수렴한다</p>
+<ul>
 <li>
 <ol start="166">
 <li>가격은 가치에 수렴하지 않습니다. 언제나 불안정하게 흔들리고 있습니다.</li>
@@ -159,6 +192,9 @@
 <li>지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?</li>
 </ol>
 </li>
+</ul>
+<p>175 오해3 그레이엄 '스타일'</p>
+<ul>
 <li>
 <ol start="171">
 <li>재투자 이익에 의한 초과수익 증가가 누적되어 기업가치 상승을 이루어내는 것이 바로 주식의 안전마진</li>
@@ -187,24 +223,32 @@
 </ul>
 <br>
 <h3 id="07-버핏-범접할-수-없는-천재"><strong>07. 버핏, 범접할 수 없는 천재</strong></h3>
+<p>198 성과를 보자</p>
+<p>206 집에서 따라 하지 마세요</p>
 <ul>
 <li>그레이엄 추앙, 입사, 자체 펀드 운용</li>
 <li>버핏의 은퇴시점은 탁월했습니다. 1970년대에는 두 번의 오일쇼크, 인플레이션, 금리급등, 닉슨쇼크, 베트남전쟁, 워터게이트사건, 아프칸침공  /  S&amp;P지수가 10년간 100언저리</li>
 <li>방향성을 예측하는 투자를 하지 않았지만, 시장의 커다란 변곡점에서는 탁월한 의사결정</li>
 <li>1974.11월 필립피셔의 성장주 종목들을 밴 그래이엄의 담배꽁초 가격으로 살 수 있는 최초의 시기</li>
 <li>버핏의 주주서한 책</li>
-<li><strong>레슨1. 젖소를 키웁시다</strong></li>
+</ul>
+<p>219 <strong>레슨1. 젖소를 키웁시다</strong></p>
+<ul>
 <li>훌륭한 기업을 적당한 가격에 사는 것이 적당한 기업을 훌륭한 가격에 사는 것보다 낫습니다</li>
 <li>담배꽁초 기업 : 회사 내부에 현금화할 수 있는 어떤 자산이 있고, 주가가 이보다 싸면 담배꽁초 기업입니다.</li>
 <li>현금은 장기간에 걸쳐 확실히 구매력을 상실하는 자산입니다</li>
 <li>보통주나 토지 같은 생산적인 자산이야말로 우수한 실적을 창출할 가능성이 가장 높은 투자 대상이다</li>
 <li>배당 : 일부만 돌려줌, 유보금은 주준의 것, 내면화되어 더 미래의 배당으로 또는 청산시 잔여자산</li>
-<li><strong>레슨2. 경제적 해자</strong></li>
+</ul>
+<p>241 <strong>레슨2. 경제적 해자</strong></p>
+<ul>
 <li>지속가능한 경쟁우위</li>
 <li>투자자는 계속 돈을 요구하는 기업이 아니라 돈을 벌어주는 기업을 찾아내야 합니다.</li>
 <li>기술은 의외로 침식당하기 쉬운 해자입니다. 경쟁사와의 격차를 유지하는데에 계속 비용이 들고, 한번 전략을 잘못 세우거나 운이 나빠서 선도적인 지위를 뺏겨버리기도 합니다</li>
 <li>항공업은 지속적인 투자 필요, 제자리를 유지하는데에도 엄청난 현금 사용</li>
-<li><strong>레슨3. 능력 범위</strong></li>
+</ul>
+<p>269 <strong>레슨3. 능력 범위</strong></p>
+<ul>
 <li>
 <ol start="270">
 <li>본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깊이 공부하고 집중투자했습니다.</li>
@@ -220,6 +264,9 @@
 <li>능력범위 이내에서 투자를 해야 경영진을 믿고 기다릴 수 있습니다</li>
 </ol>
 </li>
+</ul>
+<p>282 버핏의 말, 말, 말</p>
+<ul>
 <li>
 <ol start="282">
 <li>배우자와 결혼해서 그를 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.</li>
@@ -248,15 +295,23 @@
 </ul>
 <br>
 <h3 id="08-린치-단-한-명의-영웅"><strong>08. 린치, 단 한 명의 영웅</strong></h3>
+<p>304 성과를 보자</p>
+<p>309 참 쉽죠?</p>
 <ul>
 <li>편드매니저, 1977~1990 마젤란펀드, 일반투자자를 위해 책 3권 서술</li>
 <li>월가의 영웅 추천</li>
 <li>잘 모르고 막 매매할 때가 사실 가장 짜릿하고 즐겁습니다</li>
+</ul>
+<p>318 레슨1. 바텀업</p>
+<ul>
 <li>
 <ol start="320">
 <li>내가 환경을 예측해 열심히 매매  vs  환경변화에 잘 대응하는 기업을 찾아서 묻어가는 방법</li>
 </ol>
 </li>
+</ul>
+<p>328 레슨2. 10루타</p>
+<ul>
 <li>
 <ol start="330">
 <li>주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대칭이 됨)</li>
@@ -270,6 +325,8 @@
 </li>
 <li>PER를 주로 이용하여 기업 평가 (중요한 것은 미래의 이익인데 미래는 불확실하니까 현재의 이익으로 주가를 나누는 PER는 불완전)</li>
 </ul>
+<p>341 레슨3. 분산투자</p>
+<p>피터 린치의 '기법'들</p>
 
         
         
