--- a/docu/docu_0012.html
+++ b/docu/docu_0012.html
@@ -48,7 +48,7 @@
 <li><a href="https://www.youtube.com/watch?v=T5qHT-TqS4I">https://www.youtube.com/watch?v=T5qHT-TqS4I</a></li>
 </ul>
 <br>
-<h3 id="1-세상이-어떻게-편집되어-있는가">1. 세상이 어떻게 편집되어 있는가</h3>
+<h3 id="1-세상이-어떻게-편집되어-있는가"><strong>1. 세상이 어떻게 편집되어 있는가</strong></h3>
 <p>다르게 보기</p>
 <p>지식이 종속되는 것은 위험하다 (문화심리학이 없었음. 미국책 번역해서 가져옴. 독일)</p>
 <p>정보가 넘쳐나는 사회 -&gt; 편집자가 권력을 가진다</p>
@@ -77,7 +77,7 @@
 <p>창조적 삶을 위해서는 나만의 시간이</p>
 <p>유태인 철학 : 노동의 철학이면서 쉼의 철학 (6일 일하고 하루 쉼)</p>
 <br>
-<h3 id="2-일상--우리-삶을-어떻게-편집해야-재미있어-지는가">2. 일상 / 우리 삶을 어떻게 편집해야 재미있어 지는가</h3>
+<h3 id="2-일상--우리-삶을-어떻게-편집해야-재미있어-지는가"><strong>2. 일상 / 우리 삶을 어떻게 편집해야 재미있어 지는가</strong></h3>
 <p>21세기 인류 : 재미와 행복 (절대 빈곤을 벗어나서, 왜 사는가에 대해서 고민)</p>
 <p>자유와 민주 이후 궁극적 가치 재미와 행복</p>
 <p>카메라 여러 대로 편집 (축구, 아이돌 편집)</p>
@@ -86,7 +86,7 @@
 <p>뭘 같다 붙이느냐에 따라서 해석을 달라짐 (감독 역할이 달라짐)</p>
 <p>시선(원근법) : 왼쪽에서 오른쪽으로 본다 : 소실점(수렴되는 점, 객관성), 좌표(합리성) : 서구 과학 기본</p>
 <p>동양(역원근법) : 멀티블 퍼스펙티브 이미 가졌음(인상파) : 과학적 사고 늦었으나,</p>
-<p>수태고지 : 어디에 붙어있는지에 따라서 고려하여 그림 (다빈치 그림) : 항상 정면에서 봐야한다는 편견</p>
+<p>수태고지 : 어디에 붙어있는지에 고려하여 그림 (다빈치 그림) : 항상 정면에서 봐야한다는 편견</p>
 <p>음악 : 지휘자가 속도를 편집 : 대상이 없다 : 사람을 움직이게 함 :</p>
 <p>카라얀 : 시각과 청각을 편집해 낸 사람 : 영상을 만들어 낸다 : 공감각 : 감각의 교차를 영상으로 만듦</p>
 <p>편집은 재미를 추구 : 아이들은 오직 한 가지 생각 : 재미있을려구 : 사회화를 시킴. 재미가 사람짐 : 창조적이 되려면 창조적이 됨</p>
@@ -100,6 +100,25 @@
 <ul>
 <li>내가 좋아하는 것을 공부하는 것</li>
 </ul>
+<br>
+<h3 id="3-참조적-삶이란"><strong>3. 참조적 삶이란</strong></h3>
+<p>객관적인 세계는 없다. 편집된 세계다</p>
+<p>북극 : 남쪽으로 갔다가 서쪽으로 갔다가 북쪽으로 갔는데 원위치</p>
+<p>객관적이라 생각하는 것이 절대 객관적이지 않다 : 지도</p>
+<p>기억하고 싶은 것만 기억한다 (빼 내 오는 것이 다르다) : 객관성 -&gt; 상호주관성(각 개인이 공유하고 있는 것)</p>
+<p>원숭이 vs 인간 : 함께 보는 것이 가능함, 남들이 보는 것을 같이 보고자 함  (같이보기 -&gt; 의미공유)</p>
+<p>정보의 빈틈을 줘야지 공각이 가능함 : 이야기가 풍부한 사람</p>
+<p>재미(소통의 조건) : 유머있는 사람이 설득을 잘 함</p>
+<p>자막은 일방적인 소통이 아니라 상호 소통을 하는 것임</p>
+<p>사회 가치 : 평균 수명 50세 (근면, 성실) &lt;--&gt; 평균 수명 100세 시대 : Burnout, 인안하고 30년은 더 살아야 함, 노년의 행복이 진짜 행복</p>
+<p>나가 : 남의 얘기네. 니 이론이 뭐야</p>
+<p>독일 : 카드로 정리 : 편집한 카드 쭉 뽑아냄 (카드에 제목 붙이는 것 : 메타언어 (블로그 태그))</p>
+<p>나만의 메타언어를 붙이는 것이 실력 -&gt; 남들이 생각 못하는 것을 생각할 수 있음</p>
+<p>컨닝페이퍼 : 추상화되는 정보 (메타언어)</p>
+<p>100세 시대에서의 문제 : 조급함과 불안 (숲을 못 본다 : 메타언어를 상실한다)</p>
+<p>불안하면 전체를 보는 능력이 사람짐</p>
+<p>미래의 불안을 앞당겨요</p>
+<p>재미와 의미가 만나는 지점 : 오늘을 살자 : 내가 부르는 노래로 내 주위 사람들이 나를 안다</p>
 
         
         
