거인의어깨1 2nd중

--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -43,34 +43,25 @@
         <h1 id="거인의-어깨-1">거인의 어깨 1</h1>
 <p>초판 4쇄 2023.02.06(22.12.12), 출판사:포레스트북스, 지은이:홍진채</p>
 <br>
-<h3 id="0104-굳이-열심해-해야-하나"><strong>01~04. 굳이 열심해 해야 하나</strong></h3>
+<h3 id="파운데이션을-찾아서">파운데이션을 찾아서</h3>
 <ul>
-<li>
-<ol start="18">
-<li>위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가</li>
-</ol>
-</li>
+<li>014 주식은 다른 자산 대비 위험을 덜 짊어지고도 월등히 높은 수익을 거둘 수 있습니다</li>
 </ul>
+<h2 id="1부-굳이-열심해-해야-하나">1부 굳이 열심해 해야 하나</h2>
 <h3 id="01-주식-이-특이한-자산">01. 주식, 이 특이한 자산</h3>
 <ul>
-<li>
-<ol start="26">
-<li>자산배분에서 주식을 제외하는 것은 엄청나게 위험합니다</li>
-</ol>
-</li>
+<li>026 자산배분에서 주식을 제외하는 것은 엄청나게 위험합니다</li>
+<li>033 부동산은 대출을 껴서 산 이후 대출 금리 이상으로 부동산 가격이 상승하면 순수하게 자기자본으로 샀을 때보다 더 큰 이득을 얻을 수 있습니다</li>
+<li>035 변동성은 주식의 가장 큰 단점</li>
+<li>042 효율적 투자선 : 위험 줄이고 가장 높은 수익률 획득히는 비율 : 1년 투자 (주식 13%), 10년 투자 (주식 25%), 30년 투자 (주식 68%)</li>
+<li>043 위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가</li>
 </ul>
 <h3 id="02-창의성과-정직함">02. 창의성과 정직함</h3>
 <ul>
-<li>
-<ol start="45">
-<li>앞으로 얼마의 시간이 흐르든 주식과 같은 자산이 다른 자산군보다 압도적인 승자가 될 것으로 믿습니다. 더 중요한 사실은 이쪽이 훨씬 더 안전하다는 점입니다</li>
-</ol>
-</li>
-<li>
-<ol start="46">
-<li>주식은 보유 기간이 길어질수록 변동성이 줄어드는 아주 특이한 자산</li>
-</ol>
-</li>
+<li>045 앞으로 얼마의 시간이 흐르든 주식과 같은 자산이 다른 자산군보다 압도적인 승자가 될 것으로 믿습니다. 더 중요한 사실은 이쪽이 훨씬 더 안전하다는 점입니다</li>
+<li>046 주식은 보유 기간이 길어질수록 변동성이 줄어드는 아주 특이한 자산</li>
+<li>054 창의성과 정직함에 대해서 주주가 기업을 얼마나 신뢰하느냐가 곧 주식의 가치입니다</li>
+<li>056 미국은 사업가를 존중하고 영웅시하되, 사기를 치거나 약속을 어긴 사업가는 과감하게 퇴출</li>
 </ul>
 <h3 id="03-항상-괴로운-투자자">03. 항상 괴로운 투자자</h3>
 <ul>
