--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^</p>
+        <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd 중)</a> </p>
         <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
         <p> <a href="./book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
-        <p> <a href="./book/book_0121.html">121. 거인의 어깨 1</a> </p>
         <p> <a href="./book/book_0120.html">120. 세상의 모든 법칙</a> </p>
         <p> <a href="./book/book_0119.html">119. 너도 작가가 되고 싶니?</a> </p>
         <p> <a href="./book/book_0118.html">118. 무조건 당신편</a> </p>
