거인의어깨1 보완중

--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -65,21 +65,28 @@
 </ul>
 <h3 id="03-항상-괴로운-투자자">03. 항상 괴로운 투자자</h3>
 <ul>
-<li>
-<ol start="63">
-<li>이게 얼마짜리인지를 아무도 모른다</li>
-</ol>
-</li>
+<li>063 이게 얼마짜리인지를 아무도 모른다. 정말로 아무도 모릅니다. (경연지도 M&amp;A 과정의 투자자나 자문가도).  창의성과 정직함 그리고 믿음 vs. 미래 현금 흐름의 현재가 할인</li>
+<li>064 가치 따위 고려하지 않고 매매 : 단기적인 움직임에 집중, 가치 측정하기 어렵기 때문, 가치 측정은 너무나도 주관적임</li>
+<li>065 주식투자는 제로섬 게임 (딜러를 포함하면 마이너스섬 게임), 대부분의 사람들은 시장수익률 하회 (하우스만 돈을 번다 : 세금(국가), 수수료(투자운용사))</li>
+<li>065 시스템 외부로부터 자금의 유출입이 되느냐에 따라서 닫힉 시스템과 열린 시스템으로 구분 (주식시장은 열린시스템. 회사가 번 돈이 주주에게 환원)</li>
+<li>책 : 주식하는 마음</li>
+<li>073 주식시장에서 우리 뇌는 항상 무언가른 하도록 지시 : 실제로 의사결정의 결과를 보기 위해서는 짧게는 몇 개월, 길게는 몇 년씩 기다려야 할 수도 있습니다</li>
+<li>074 주가선행지표를 발견했다고 하더라도 그 지표가 광범위하게 알려지면 선행성이 사라집니다</li>
+<li>075 주식시장은 진득하게 앉아 있으면 웬만해서는 지지는 않는 게임입니다 (지는 이유 : 아무도 평균에 만족하지 못하고 자꾸 행동하기 때문)</li>
+<li>076 생존편향 : 살아남은 사실들만 모아서 공통점을 찾아보면 오류에 빠짐 (죽은자는 말이 없다)</li>
+<li>078 투자자가 자신의 실력을 과대평가하는 구간이 나타남 (정보량이 너무 많을 경우)</li>
+<li>078 수익률과 가장 밀접한 상관관계 : 회전율이 높으면 수익률이 낮아짐</li>
 </ul>
 <h3 id="04-여기서-그만두셔도-됩니다">04. 여기서 그만두셔도 됩니다</h3>
 <ul>
-<li>
-<ol start="91">
-<li>맞서 싸워야 할 적은 시장이 아니라 내 마음 속의 조급함입니다</li>
-</ol>
-</li>
+<li>090 (시장수익률만 올리는 전략) 상승장에서는 잘난 척하는 사람들 때문에 외롭고, 하락장에서는 손실난 계좌 때문에 괴롭습니다</li>
+<li>091 맞서 싸워야 할 적은 시장이 아니라 내 마음 속의 조급함입니다</li>
+<li>091 (시장수익률 얻는 전략) 시장 전체를 추종하는 인덱스 펀드나 ETF 보유 / 가능한 한 가장 큰 시장</li>
+<li>093 양자택일의 문제가 아니라, 재산의 일부는 패시브하게 운용하고 일부는 액티브하게 운용</li>
+<li>094 굳이 주식투자에 큰 에너지를 투입하지 않아도 됩니다. 어차피 승률이 낮은 게임입니다</li>
 </ul>
 <br>
+<h2 id="2부-거인의-어깨s">2부 거인의 어깨s</h2>
 <h3 id="05-어서-오게-인간">05. 어서 오게 인간</h3>
 <ul>
 <li>
@@ -91,6 +98,12 @@
 <ol start="106">
 <li>투자의 세계에서 단기 성과는 무작위성에 크게 영향을 받습니다</li>
 </ol>
+</li>
+<li>책 플랫랜드
+<ul>
+<li>2차원세계에 사는 사각형과 3차원 세계의 구 : 구가 사각형에게 3차원 세계에 대해서 설명</li>
+<li>사각형이 3차원의 세계를 이해하고 그 이상의 차원이 존재할 수 있다고 추론하지만, 구는 그런 세계가 존재할 수 없다고 주장</li>
+</ul>
 </li>
 </ul>
 <br>
