거인의어깨1. 그레이엄3/9

--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -65,10 +65,10 @@
 </ul>
 <h3 id="03-항상-괴로운-투자자">03. 항상 괴로운 투자자</h3>
 <ul>
-<li>063 이게 얼마짜리인지를 아무도 모른다. 정말로 아무도 모릅니다. (경연지도 M&amp;A 과정의 투자자나 자문가도).  창의성과 정직함 그리고 믿음 vs. 미래 현금 흐름의 현재가 할인</li>
+<li>063 이게 얼마짜리인지를 아무도 모른다. 정말로 아무도 모릅니다. (경영자도 M&amp;A 과정의 투자자나 자문가도).  창의성과 정직함 그리고 믿음 vs. 미래 현금 흐름의 현재가 할인</li>
 <li>064 가치 따위 고려하지 않고 매매 : 단기적인 움직임에 집중, 가치 측정하기 어렵기 때문, 가치 측정은 너무나도 주관적임</li>
 <li>065 주식투자는 제로섬 게임 (딜러를 포함하면 마이너스섬 게임), 대부분의 사람들은 시장수익률 하회 (하우스만 돈을 번다 : 세금(국가), 수수료(투자운용사))</li>
-<li>065 시스템 외부로부터 자금의 유출입이 되느냐에 따라서 닫힉 시스템과 열린 시스템으로 구분 (주식시장은 열린시스템. 회사가 번 돈이 주주에게 환원)</li>
+<li>065 시스템 외부로부터 자금의 유출입이 되느냐에 따라서 닫힌 시스템과 열린 시스템으로 구분 (주식시장은 열린시스템. 회사가 번 돈이 주주에게 환원)</li>
 <li>책 : 주식하는 마음</li>
 <li>073 주식시장에서 우리 뇌는 항상 무언가른 하도록 지시 : 실제로 의사결정의 결과를 보기 위해서는 짧게는 몇 개월, 길게는 몇 년씩 기다려야 할 수도 있습니다</li>
 <li>074 주가선행지표를 발견했다고 하더라도 그 지표가 광범위하게 알려지면 선행성이 사라집니다</li>
@@ -86,7 +86,7 @@
 <li>094 굳이 주식투자에 큰 에너지를 투입하지 않아도 됩니다. 어차피 승률이 낮은 게임입니다</li>
 </ul>
 <br>
-<h2 id="2부-거인의-어깨s">2부 거인의 어깨s</h2>
+<h2 id="2부-거인의-어깨">2부 거인의 어깨</h2>
 <h3 id="05-어서-오게-인간">05. 어서 오게 인간</h3>
 <ul>
 <li>
@@ -108,6 +108,7 @@
 </ul>
 <br>
 <h3 id="06-그레이엄-여전히-너무나-저평가된"><strong>06. 그레이엄, 여전히 너무나 저평가된</strong></h3>
+<p>책 : 증권분석(1934), <strong>현명한 투자자</strong>(1949)</p>
 <p>119 성과를 보자</p>
 <ul>
 <li>
@@ -117,20 +118,50 @@
 </li>
 </ul>
 <p>125 배울 수 있는가</p>
-<p>131 레슨1. 주식은 사업에 대한 소유권</p>
 <ul>
+<li>
+<ol start="125">
+<li>훌륭한 투자자였을 뿐 아니라, 다른 사람에게 투자를 잘하는 방법을 알려주기 위해 각고의 노력을 다함</li>
+</ol>
+</li>
 <li>
 <ol start="131">
 <li>주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다</li>
 </ol>
 </li>
+</ul>
+<p>131 레슨1. <strong>주식은 사업에 대한 소유권</strong></p>
+<ul>
+<li>
+<ol start="132">
+<li>내 사업을 얼마의 가격이면 만족스럽게 매각할 수 있을지, 타인의 사업을 인수한다면 얼마의 가격에 만족스럽게 인수할 수 있을지</li>
+</ol>
+</li>
 <li>
 <ol start="134">
-<li>주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 가회일 뿐입니다</li>
+<li>주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 기회일 뿐입니다</li>
+</ol>
+</li>
+<li>
+<ol start="135">
+<li>가치 기반 사고를 하지 않는 투자자는 가격이 오르든 내리든 언제나 불안합니다.</li>
+</ol>
+</li>
+<li>
+<ol start="136">
+<li>초과수익의 원천 두 가지 : 시점 선택(오를 타이밍)과 가격 선택(적정가격보다 낮을 때 매수)</li>
+</ol>
+<ul>
+<li>시점선택은 매우 어려움, 현명한 투자자는 가격선택만으로 만족스러운 결과 획득 가능</li>
+</ul>
+</li>
+<li>
+<ol start="137">
+<li>가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음</li>
 </ol>
 </li>
 </ul>
-<p>139 레슨2 미스터마켓</p>
+<p>139 레슨2. 미스터마켓</p>
 <ul>
 <li>
 <ol start="139">
