거인의어깨1 보완중

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> 23.05.01 50권/년 ^^</p>
+        <p> 23.05.01 50권/년 ^^ (now 08(7/9), )</p>
         <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd 중)</a> </p>
         <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
         <p> <a href="./book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
