--- a/book/book_0121.html
+++ b/book/book_0121.html
@@ -15,6 +15,41 @@
 	display: none;
 }
 
+/* From extension ms-toolsai.jupyter */
+/* These classnames are inherited from bootstrap, but are present in most notebook renderers */
+
+.alert {
+    width: auto;
+    padding: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+.alert > *:last-child {
+    margin-bottom: 0;
+}
+#preview > .alert:last-child {
+    /* Prevent this being set to zero by the default notebook stylesheet */
+    padding-bottom: 1em;
+}
+
+.alert-success {
+    /* Note there is no suitable color available, so we just copy "info" */
+    background-color: var(--theme-info-background);
+    color: var(--theme-info-foreground);
+}
+.alert-info {
+    background-color: var(--theme-info-background);
+    color: var(--theme-info-foreground);
+}
+.alert-warning {
+    background-color: var(--theme-warning-background);
+    color: var(--theme-warning-foreground);
+}
+.alert-danger {
+    background-color: var(--theme-error-background);
+    color: var(--theme-error-foreground);
+}
+
 </style>
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Microsoft/vscode/extensions/markdown-language-features/media/markdown.css">
@@ -157,7 +192,7 @@
 </li>
 <li>
 <ol start="137">
-<li>가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음</li>
+<li><strong>가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음</strong></li>
 </ol>
 </li>
 </ul>
@@ -170,6 +205,11 @@
 </li>
 <li>
 <ol start="140">
+<li>시장이란 내가 어떤 사업체를 인수하거나 매각할 일이 있을 때 잠깐 들르는 곳이라고 생각</li>
+</ol>
+</li>
+<li>
+<ol start="140">
 <li><strong>미스터마켓</strong>, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨</li>
 </ol>
 </li>
@@ -178,9 +218,24 @@
 <li>사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다</li>
 </ol>
 </li>
+<li>
+<ol start="143">
+<li>내가 받아들일 수 있는 '마음 편한 가격', 그리고 받아들일 수 없는 '불편한 가격'</li>
+</ol>
+</li>
 </ul>
 <p>143 레슨3. 안전마진</p>
 <ul>
+<li>
+<ol start="144">
+<li>건전한 투자의 비밀을 한마디로 요약한다면, 안전마진</li>
+</ol>
+</li>
+<li>
+<ol start="144">
+<li>무작정 싸게??? 언제 사야하는 알 수 없다. 오를 때는 살 수 없다.</li>
+</ol>
+</li>
 <li>
 <ol start="147">
 <li>안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념</li>
@@ -191,7 +246,7 @@
 <ul>
 <li>
 <ol start="152">
-<li>저PER 주식을 사야한다</li>
+<li>저PER 주식을 사야한다는 오해 / 내가 생각하는 적정 PER대비 낮은 PER 주식을 사는 것임</li>
 </ol>
 </li>
 <li>
@@ -206,7 +261,7 @@
 </li>
 <li>
 <ol start="158">
-<li>주식의 가치는 미래 현금흐름의 현재가 할인</li>
+<li>주식의 가치는 미래 현금흐름의 현재가 할인 (미래 성장은 가치를 구성하는 핵심 요소)</li>
 </ol>
 </li>
 <li>
@@ -218,13 +273,33 @@
 <p>163 오해2. 가격은 가치에 수렴한다</p>
 <ul>
 <li>
+<ol start="164">
+<li>장기적으로 가격은 가치에 수렴한다는 오해</li>
+</ol>
+</li>
+<li>
 <ol start="166">
 <li>가격은 가치에 수렴하지 않습니다. 언제나 불안정하게 흔들리고 있습니다.</li>
 </ol>
 </li>
 <li>
+<ol start="167">
+<li>랜덤워크 : 주식 가격의 변동 : 고장난 체중계</li>
+</ol>
+</li>
+<li>
 <ol start="168">
 <li>지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?</li>
+</ol>
+</li>
+<li>
+<ol start="170">
+<li>화사가 청산 절차를 밟지 않는 한 1주당 자산가액은 이 주식의 시장가치와 아무런 상관이 없다</li>
+</ol>
+</li>
+<li>
+<ol start="170">
+<li>내재가치가 만족할 만한 속도로 성장하기만 한다면 그 사업의 성공이 언제 인정 받는냐는 그다지 중요하지 않습니다</li>
 </ol>
 </li>
 </ul>
@@ -243,11 +318,6 @@
 <li>
 <ol start="177">
 <li>공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함</li>
-</ol>
-</li>
-<li>
-<ol start="179">
-<li>시장 전체를 추종하는 투자를 현재의 용어로 수동적 투자자</li>
 </ol>
 </li>
 <li>
