--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
         <h3>Docu</h3>
         <p> <a href="./docu/docu_0011.html">0011. 메가스터디, 손주은, 삼프로TV </a> </p>
         <p> <a href="./docu/docu_0012.html">0012. KBS 새해맞이 특별강연. 문화심리학자 김정운 </a> </p>
+        <p> <a href="./docu/docu_0013.html">0013. 2023.08 유튜브 </a> </p>
         <br>
         <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
         <p> <a href="./docu/docu_0002.html">0002. 시험 (EBS 다큐프라임) (18.06.06) </a> </p>
