--- a/docu/docu_0013.html
+++ b/docu/docu_0013.html
@@ -83,10 +83,47 @@
 </ul>
 <p>내역</p>
 <ul>
+<li>삼프로 글로벌이슈체크 최홍석 (23.08.10)</li>
+<li>삼프로 In-Depth30 이선엽 (23.08.11)</li>
+<li>삼프로 In-Depth30 한상완 (23.08.09)</li>
 <li>홍사훈 : 이명찬 (23.08.10, 일본역전)</li>
 <li>홍사훈 : 한문도 (23.08.09)</li>
 <li>김작가 : 빈센트 (23.07.31녹화) : 한 달 동안 변동된 내역 전반적인 설명 : 거시적 관점</li>
 <li>북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)</li>
+</ul>
+<br>
+<h3 id="삼프로-글로벌이슈체크-최홍석-230810"><strong>삼프로 글로벌이슈체크 최홍석 (23.08.10)</strong></h3>
+<ul>
+<li>국제유가 9개월만에 최고치, 공급우려가 중 디플레 상쇄</li>
+<li>경기회복, 수요는 정상화되었지만 공급은,,,</li>
+<li>미국 세일가스, 증산 Needs는 없음</li>
+<li>재정균형원가 : 80불 초반대</li>
+<li>원유 재고가 너무 타이트한 것 아닌가 : 순수입이 줄어듦, 드라이빙 시즌 수요 증가</li>
+<li>85불 어느 정도 견딤, 100불 넘으면 우려</li>
+</ul>
+<br>
+<h3 id="삼프로-in-depth30-이선엽-230811"><strong>삼프로 In-Depth30 이선엽 (23.08.11)</strong></h3>
+<ul>
+<li>면세점 폐장 시간 변경 18:30 -&gt; 20:00로 변경 (7.7) : 이런 아이디어 찾아야 함</li>
+<li>중국 화장품, 한국 ODM, 눈이 시장보다 3달은 빠르다</li>
+<li>요커 올때, 면세점 줄 서는 곳 눈에 확 보일꺼다</li>
+<li>무디스 지역은행 강등, 국채 미실현 손실, 상업용 부동산 문제</li>
+<li>물가 이제는 전월비가 중요 (근원도 3% 초반, 9월 인상 안할듯, 유가/곡물가 상승이 문제)</li>
+<li>버핏 8월 100억불(130조)씩 단기채 매입 (단기 금리 많이 안 오름, 주가 당분간 지지부진)</li>
+<li>공매도 세력 역대급 손실 : 535억달러(7월), 1752억달러(년간), 7월에 숏커버 많이 했음(확 오르는 경향, 단기 과열, 방향의 문제가 아니라 속도의 문제)</li>
+<li>공매도 세력 : 작년에 부정적으로 봐서 수익 좋았음, 올해 많은 어려움</li>
+</ul>
+<br>
+<h3 id="삼프로-in-depth30-한상완-230809"><strong>삼프로 In-Depth30 한상완 (23.08.09)</strong></h3>
+<ul>
+<li>미국의 베버리지 곡선 : 구인율, 실업률 그래프 (서비스 국가)</li>
+<li>제조국가(한국) : 생산, 재고 비율</li>
+<li>한국 경제 저점 통과중 (반도체, 중국), 반등은 느릴거다</li>
+<li>미국 하향 안정화(저물가 중성장), 중국 반등 빠르지 않다.(주택 부양책 사용하지 않음)</li>
+<li>부동산 좋아야 내수가 좋아짐</li>
+<li>바닥 통과했다 (금융 망가지면서 부동산도 망가짐, 금리 조정하면서 부동산도 함께 떨어짐)</li>
+<li>지방, 수도권 사이클 차별화 (금리 적게 올려서 견딜 수 있었음)</li>
+<li>1기 신도시 위주로 상승 예상 (목동, 상계동, 5개 1기 신도시)</li>
 </ul>
 <br>
 <h3 id="홍사훈--이명찬-230810-일본역전"><strong>홍사훈 : 이명찬 (23.08.10, 일본역전)</strong></h3>
