--- a/index.html
+++ b/index.html
@@ -32,6 +32,141 @@
     </div>
 
     <div> 
+        <h3>BOOK</h3>
+        <p> 23.05.01 50권/년 ^^ (now 124(6/12))</p>
+        <p> <a href="./book/book_0124.html">124. 주식하는 마음 (작성중)</a> </p>
+        <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd)</a> </p>
+        <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
+        <p> <a href="./book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
+        <p> <a href="./book/book_0120.html">120. 세상의 모든 법칙</a> </p>
+        <p> <a href="./book/book_0119.html">119. 너도 작가가 되고 싶니?</a> </p>
+        <p> <a href="./book/book_0118.html">118. 무조건 당신편</a> </p>
+        <p> <a href="./book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a> </p>
+        <br>
+        <p> 주제별</p>
+        <p> <a href="./book/book_psychology.html">심리학</a> </p>
+        <p> <a href="./book/book_poem.html">시</a> </p>
+        <br>
+        <p> W 06.11 책15(100~114)</p>
+        <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a> </p>
+        <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
+        <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
+        <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
+        <p> <a href="./book/book_0112.html">112. 피니시 ###</a> </p>
+        <p> <a href="./book/book_0111.html">111. 쫌 이상한 사람들</a> </p>
+        <p> <a href="./book/book_0110.html">110. 새로운 가난이 온다</a> </p>
+        <p> <a href="./book/book_0109.html">109. 함께 사는 세상 - 우리 아파트 이야기</a> </p>
+        <p> <a href="./book/book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
+        <p> <a href="./book/book_0107.html">107. The ART of 소울</a> </p>
+        <p> <a href="./book/book_0106.html">106. 김유정</a> </p>
+        <p> <a href="./book/book_0105.html">105. 하케의 동물 이야기 ###</a> </p>
+        <p> <a href="./book/book_0104.html">104. 오감도 권태</a> </p>
+        <p> <a href="./book/book_0103.html">103. 그 많던 싱아는 누가 다 먹었을까</a> </p>
+        <p> <a href="./book/book_0102.html">102. 자제력 수업</a> </p>
+        <p> <a href="./book/book_0101.html">101. 슬로리딩, 생각을 키우는 힘</a> </p>
+        <p> <a href="./book/book_0100.html">100. 아들이 당신을 필요로 할 때</a> </p>
+        <p> <a href="./book/book_0099.html">099. 슬로리딩 ###</a> </p>
+        <p> <a href="./book/book_0098.html">098. 주머니 속의 가을</a> </p>
+        <p> <a href="./book/book_0097.html">097. 잘했어요 노트 ###</a> </p>
+        <p> <a href="./book/book_0096.html">096. 그림 그리는 새</a> </p>
+        <p> <a href="./book/book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+        <p> <a href="./book/book_0094.html">094. 논어, 직장인의 미래를 논하다</a> </p>
+        <p> <a href="./book/book_0093.html">093. 내 여자의 열매</a> </p>
+        <p> <a href="./book/book_0092.html">092. 나는 프로그래머다 2</a> </p>
+        <p> <a href="./book/book_0091.html">091. 나는 프로그래머다</a> </p>
+        <p> <a href="./book/book_0090.html">090. 내가 사랑한 책</a> </p>
+        <p> <a href="./book/book_0089.html">089. 책등에 베이다</a> </p>
+        <p> <a href="./book/book_0088.html">088. 뇌, 인간을 읽다</a> </p>
+        <p> <a href="./book/book_0087.html">087. 같은 말도 듣기 좋게</a> </p>
+        <p> <a href="./book/book_0086.html">086. 그렇게 물어보면 원하는 답을 들을 수 없습니다</a> </p>
+        <p> <a href="./book/book_0085.html">085. 공자, 최후의 20년</a> </p>
+        <p> <a href="./book/book_0084.html">084. 낭송 사자소학</a> </p>
+        <p> <a href="./book/book_0083.html">083. 아빠의 인성교육</a> </p>
+        <p> <a href="./book/book_0082.html">082. 소리치지 않고 때리지 않고 ###</a> </p>
+        <p> <a href="./book/book_0081.html">081. 생각에 관한 생각 - 2. 휴리스틱과 편향 (‘Heuristics and Biases)</a> </p>
+        <p> <a href="./book/book_0080.html">080. 생각에 관한 생각 - 1.두 가지 시스템</a> </p>
+        <p> <a href="./book/book_0079.html">079. 블랙리스트</a> </p>
+        <p> <a href="./book/book_0078.html">078. 자전거 못 타는 아이</a> </p>
+        <p> <a href="./book/book_0077.html">077. 얼굴 빨개지는 아이</a> </p>
+        <p> <a href="./book/book_0076.html">076. 타나토노트 2</a> </p>
+        <p> <a href="./book/book_0075.html">075. 타나토노트 1</a> </p>
+        <p> <a href="./book/book_0074.html">074. 가난의 힘</a> </p>
+        <p> <a href="./book/book_0073.html">073. 중학교과서 고전읽기 1/2</a> </p>
+        <p> <a href="./book/book_0072.html">072. 중학교과서 고전읽기 2/2</a> </p>
+        <p> <a href="./book/book_0071.html">071. 국어시간에 수필 읽기 3</a> </p>
+        <p> <a href="./book/book_0070.html">070. 보수주의자의 양심</a> </p>
+        <p> <a href="./book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a> </p>
+        <p> <a href="./book/book_0068.html">068. 미움받아도 괜찮아 ###</a> </p>
+        <p> <a href="./book/book_0067.html">067. 인공지능에 도덕엔진을 탑재하는 법</a> </p>
+        <p> <a href="./book/book_0066.html">066. 독도고래</a> </p>
+        <p> <a href="./book/book_0065.html">065. 질문이 있는 식탁 유대인 교육의 비밀</a> </p>
+        <p> <a href="./book/book_0064.html">064. 국어 시간에 수필 읽기 2</a> </p>
+        <p> <a href="./book/book_0063.html">063. 초격차</a> </p>
+        <p> <a href="./book/book_0062.html">062. 사축일기</a> </p>
+        <p> <a href="./book/book_0061.html">061. 국어 시간에 수필 읽기 1</a> </p>
+        <p> <a href="./book/book_0060.html">060. 폭풍의 언덕</a> </p>
+        <p> <a href="./book/book_0059.html">059. 아버지는 그렇게 작아져간다</a> </p>
+        <p> <a href="./book/book_0058.html">058. 소멸세계</a> </p>
+        <p> <a href="./book/book_0057.html">057. 편의점 인간</a> </p>
+        <p> <a href="./book/book_0056.html">056. 은색의 노래</a> </p>
+        <p> <a href="./book/book_0055.html">055. 어린이를 위한 그리스 신화 교실</a> </p>
+        <p> <a href="./book/book_0054.html">054. 백석, 외롭고 높고 쓸쓸한</a> </p>
+        <p> <a href="./book/book_0053.html">053. 엄마는 파업중</a> </p>
+        <p> <a href="./book/book_0052.html">052. 보노보노처럼 살다니 다행이야</a> </p>
+        <p> <a href="./book/book_0051.html">051. 행복도 선택이다</a> </p>
+        <p> <a href="./book/book_0050.html">050. 82년생 김지영</a> </p>
+        <p> <a href="./book/book_0049.html">049. 난 빨강</a> </p>
+        <p> <a href="./book/book_0048.html">048. 사람은 누구나 폭탄이다</a> </p>
+        <p> <a href="./book/book_0047.html">047. 그렇습니까? 기린입니다.</a> </p>
+        <p> <a href="./book/book_0046.html">046. 처음 인문학</a> </p>
+        <p> <a href="./book/book_0045.html">045. 거북이는 왜 달리기 경주를 했을까?</a> </p>
+        <p> <a href="./book/book_0044.html">044. 다섯개의 사다리</a> </p>
+        <p> <a href="./book/book_0043.html">043. 데이터과학과 알고리즘</a> </p>
+        <p> <a href="./book/book_0042.html">042. 통계적으로 생각하기</a> </p>
+        <p> <a href="./book/book_0041.html">041. 나도 노벨상이 타고 싶다</a> </p>
+        <p> <a href="./book/book_0040.html">040. 저녁까지만 거짓말하기로 한 날</a> </p>
+        <p> <a href="./book/book_0039.html">039. 세상에서 가장 슬픈 여행자, 난민</a> </p>
+        <p> <a href="./book/book_0038.html">038. 포기하지마</a> </p>
+        <p> <a href="./book/book_0037.html">037. 꽃할배</a> </p>
+        <p> <a href="./book/book_0036.html">036. 굿바이 내비</a> </p>
+        <p> <a href="./book/book_0035.html">035. 우동한그릇</a> </p>
+        <p> <a href="./book/book_0034.html">034. 한국인은 미쳤다</a> </p>
+        <p> <a href="./book/book_0033.html">033. 느려도 좋아, 달라도 좋아</a> </p>
+        <p> <a href="./book/book_0032.html">032. 빅데이터를 지배하는 통계의 힘</a> </p>
+        <p> <a href="./book/book_0031.html">031. 당신이 있어 행복합니다</a> </p>
+        <p> <a href="./book/book_0030.html">030. 지적 대화를 위한 넓고 얕은 지식</a> </p>
+        <p> <a href="./book/book_0029.html">029. 데이터가 보인다</a> </p>
+        <p> <a href="./book/book_0028.html">028. 와우프로젝트</a> </p>
+        <p> <a href="./book/book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+        <p> <a href="./book/book_0026.html">026. 백곰 심리학</a> </p>
+        <p> <a href="./book/book_0025.html">025. 치유의 인문학</a> </p>
+        <p> <a href="./book/book_0024.html">024. 고함쟁이 엄마</a> </p>
+        <p> <a href="./book/book_0023.html">023. 괴짜처럼 생각하라</a> </p>
+        <p> <a href="./book/book_0022.html">022. 사람을 읽는 힘 DiSC</a> </p>
+        <p> <a href="./book/book_0021.html">021. 위대한 개츠비</a> </p>
+        <p> <a href="./book/book_0020.html">020. When the Future Belongs</a> </p>
+        <p> <a href="./book/book_0019.html">019. 가족의 두 얼굴</a> </p>
+        <p> <a href="./book/book_0018.html">018. 평사원 리더</a> </p>
+        <p> <a href="./book/book_0017.html">017. 빚더미가 몰려온다</a> </p>
+        <p> <a href="./book/book_0016.html">016. 불황10년</a> </p>
+        <p> <a href="./book/book_0015.html">015. 신뢰의 속도</a> </p>
+        <p> <a href="./book/book_0014.html">014. 동물농장</a> </p>
+        <p> <a href="./book/book_0013.html">013. 목표관리&실행</a> </p>
+        <p> <a href="./book/book_0012.html">012. 경영학 콘서트</a> </p>
+        <p> <a href="./book/book_0011.html">011. 일본을 통해본 부동산 10년 대폭락 시나리오</a> </p>
+        <p> <a href="./book/book_0010.html">010. 육아는 과학이다</a> </p>
+        <p> <a href="./book/book_0009.html">009. 이코노미스트 2010 세계경제전망</a> </p>
+        <p> <a href="./book/book_0008.html">008. 세계에서 빈곤을 없애는 30가지 방법</a> </p>
+        <p> <a href="./book/book_0007.html">007. 경제성장이 안되면 우리는 풍요롭지 못할 것인가</a> </p>
+        <p> <a href="./book/book_0006.html">006. 망각의 힘</a> </p>
+        <p> <a href="./book/book_0005.html">005. 실용주의 프로그래머</a> </p>
+        <p> <a href="./book/book_0004.html">004. 커피와 샌드위치</a> </p>
+        <p> <a href="./book/book_0003.html">003. 성취심리</a> </p>
+        <p> <a href="./book/book_0002.html">002. 메모의 기술</a> </p>
+        <p> <a href="./book/book_0001.html">001. 칭찬은 고래를 춤추게 한다</a> </p>
+    </div>
+
+    <div> 
         <h3>Office</h3>
         <p> <a href="./office/office_0001.html">0001. 엑셀 셀</a> </p>
         <p> <a href="./office/office_0008.html">0008. 엑셀 수식</a> </p>
@@ -223,141 +358,6 @@
         <p> <a href="./big/big_0033.html">0033. 4장 확률론적 학습 나이브 베이즈를 사용한 분류</a> </p>
         <p> <a href="./big/big_0034.html">0034. 5장 분할정복 결정트리와 규칙을 사용한 분류</a> </p>
         <p> <a href="./big/big_0035.html">0035. 10.11장 모델 성능 평가 및 향상</a> </p>
-    </div>
-
-    <div> 
-        <h3>BOOK</h3>
-        <p> 23.05.01 50권/년 ^^ (now 08(7/9), 09(6/12))</p>
-        <p> <a href="./book/book_0124.html">124. 주식하는 마음 (작성중)</a> </p>
-        <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd 중)</a> </p>
-        <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
-        <p> <a href="./book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a> </p>
-        <p> <a href="./book/book_0120.html">120. 세상의 모든 법칙</a> </p>
-        <p> <a href="./book/book_0119.html">119. 너도 작가가 되고 싶니?</a> </p>
-        <p> <a href="./book/book_0118.html">118. 무조건 당신편</a> </p>
-        <p> <a href="./book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a> </p>
-        <br>
-        <p> 주제별</p>
-        <p> <a href="./book/book_psychology.html">심리학</a> </p>
-        <p> <a href="./book/book_poem.html">시</a> </p>
-        <br>
-        <p> W 06.11 책15(100~114)</p>
-        <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a> </p>
-        <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
-        <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
-        <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
-        <p> <a href="./book/book_0112.html">112. 피니시 ###</a> </p>
-        <p> <a href="./book/book_0111.html">111. 쫌 이상한 사람들</a> </p>
-        <p> <a href="./book/book_0110.html">110. 새로운 가난이 온다</a> </p>
-        <p> <a href="./book/book_0109.html">109. 함께 사는 세상 - 우리 아파트 이야기</a> </p>
-        <p> <a href="./book/book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
-        <p> <a href="./book/book_0107.html">107. The ART of 소울</a> </p>
-        <p> <a href="./book/book_0106.html">106. 김유정</a> </p>
-        <p> <a href="./book/book_0105.html">105. 하케의 동물 이야기 ###</a> </p>
-        <p> <a href="./book/book_0104.html">104. 오감도 권태</a> </p>
-        <p> <a href="./book/book_0103.html">103. 그 많던 싱아는 누가 다 먹었을까</a> </p>
-        <p> <a href="./book/book_0102.html">102. 자제력 수업</a> </p>
-        <p> <a href="./book/book_0101.html">101. 슬로리딩, 생각을 키우는 힘</a> </p>
-        <p> <a href="./book/book_0100.html">100. 아들이 당신을 필요로 할 때</a> </p>
-        <p> <a href="./book/book_0099.html">099. 슬로리딩 ###</a> </p>
-        <p> <a href="./book/book_0098.html">098. 주머니 속의 가을</a> </p>
-        <p> <a href="./book/book_0097.html">097. 잘했어요 노트 ###</a> </p>
-        <p> <a href="./book/book_0096.html">096. 그림 그리는 새</a> </p>
-        <p> <a href="./book/book_0095.html">095. 자존감의 여섯 기둥</a> </p>
-        <p> <a href="./book/book_0094.html">094. 논어, 직장인의 미래를 논하다</a> </p>
-        <p> <a href="./book/book_0093.html">093. 내 여자의 열매</a> </p>
-        <p> <a href="./book/book_0092.html">092. 나는 프로그래머다 2</a> </p>
-        <p> <a href="./book/book_0091.html">091. 나는 프로그래머다</a> </p>
-        <p> <a href="./book/book_0090.html">090. 내가 사랑한 책</a> </p>
-        <p> <a href="./book/book_0089.html">089. 책등에 베이다</a> </p>
-        <p> <a href="./book/book_0088.html">088. 뇌, 인간을 읽다</a> </p>
-        <p> <a href="./book/book_0087.html">087. 같은 말도 듣기 좋게</a> </p>
-        <p> <a href="./book/book_0086.html">086. 그렇게 물어보면 원하는 답을 들을 수 없습니다</a> </p>
-        <p> <a href="./book/book_0085.html">085. 공자, 최후의 20년</a> </p>
-        <p> <a href="./book/book_0084.html">084. 낭송 사자소학</a> </p>
-        <p> <a href="./book/book_0083.html">083. 아빠의 인성교육</a> </p>
-        <p> <a href="./book/book_0082.html">082. 소리치지 않고 때리지 않고 ###</a> </p>
-        <p> <a href="./book/book_0081.html">081. 생각에 관한 생각 - 2. 휴리스틱과 편향 (‘Heuristics and Biases)</a> </p>
-        <p> <a href="./book/book_0080.html">080. 생각에 관한 생각 - 1.두 가지 시스템</a> </p>
-        <p> <a href="./book/book_0079.html">079. 블랙리스트</a> </p>
-        <p> <a href="./book/book_0078.html">078. 자전거 못 타는 아이</a> </p>
-        <p> <a href="./book/book_0077.html">077. 얼굴 빨개지는 아이</a> </p>
-        <p> <a href="./book/book_0076.html">076. 타나토노트 2</a> </p>
-        <p> <a href="./book/book_0075.html">075. 타나토노트 1</a> </p>
-        <p> <a href="./book/book_0074.html">074. 가난의 힘</a> </p>
-        <p> <a href="./book/book_0073.html">073. 중학교과서 고전읽기 1/2</a> </p>
-        <p> <a href="./book/book_0072.html">072. 중학교과서 고전읽기 2/2</a> </p>
-        <p> <a href="./book/book_0071.html">071. 국어시간에 수필 읽기 3</a> </p>
-        <p> <a href="./book/book_0070.html">070. 보수주의자의 양심</a> </p>
-        <p> <a href="./book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a> </p>
-        <p> <a href="./book/book_0068.html">068. 미움받아도 괜찮아 ###</a> </p>
-        <p> <a href="./book/book_0067.html">067. 인공지능에 도덕엔진을 탑재하는 법</a> </p>
-        <p> <a href="./book/book_0066.html">066. 독도고래</a> </p>
-        <p> <a href="./book/book_0065.html">065. 질문이 있는 식탁 유대인 교육의 비밀</a> </p>
-        <p> <a href="./book/book_0064.html">064. 국어 시간에 수필 읽기 2</a> </p>
-        <p> <a href="./book/book_0063.html">063. 초격차</a> </p>
-        <p> <a href="./book/book_0062.html">062. 사축일기</a> </p>
-        <p> <a href="./book/book_0061.html">061. 국어 시간에 수필 읽기 1</a> </p>
-        <p> <a href="./book/book_0060.html">060. 폭풍의 언덕</a> </p>
-        <p> <a href="./book/book_0059.html">059. 아버지는 그렇게 작아져간다</a> </p>
-        <p> <a href="./book/book_0058.html">058. 소멸세계</a> </p>
-        <p> <a href="./book/book_0057.html">057. 편의점 인간</a> </p>
-        <p> <a href="./book/book_0056.html">056. 은색의 노래</a> </p>
-        <p> <a href="./book/book_0055.html">055. 어린이를 위한 그리스 신화 교실</a> </p>
-        <p> <a href="./book/book_0054.html">054. 백석, 외롭고 높고 쓸쓸한</a> </p>
-        <p> <a href="./book/book_0053.html">053. 엄마는 파업중</a> </p>
-        <p> <a href="./book/book_0052.html">052. 보노보노처럼 살다니 다행이야</a> </p>
-        <p> <a href="./book/book_0051.html">051. 행복도 선택이다</a> </p>
-        <p> <a href="./book/book_0050.html">050. 82년생 김지영</a> </p>
-        <p> <a href="./book/book_0049.html">049. 난 빨강</a> </p>
-        <p> <a href="./book/book_0048.html">048. 사람은 누구나 폭탄이다</a> </p>
-        <p> <a href="./book/book_0047.html">047. 그렇습니까? 기린입니다.</a> </p>
-        <p> <a href="./book/book_0046.html">046. 처음 인문학</a> </p>
-        <p> <a href="./book/book_0045.html">045. 거북이는 왜 달리기 경주를 했을까?</a> </p>
-        <p> <a href="./book/book_0044.html">044. 다섯개의 사다리</a> </p>
-        <p> <a href="./book/book_0043.html">043. 데이터과학과 알고리즘</a> </p>
-        <p> <a href="./book/book_0042.html">042. 통계적으로 생각하기</a> </p>
-        <p> <a href="./book/book_0041.html">041. 나도 노벨상이 타고 싶다</a> </p>
-        <p> <a href="./book/book_0040.html">040. 저녁까지만 거짓말하기로 한 날</a> </p>
-        <p> <a href="./book/book_0039.html">039. 세상에서 가장 슬픈 여행자, 난민</a> </p>
-        <p> <a href="./book/book_0038.html">038. 포기하지마</a> </p>
-        <p> <a href="./book/book_0037.html">037. 꽃할배</a> </p>
-        <p> <a href="./book/book_0036.html">036. 굿바이 내비</a> </p>
-        <p> <a href="./book/book_0035.html">035. 우동한그릇</a> </p>
-        <p> <a href="./book/book_0034.html">034. 한국인은 미쳤다</a> </p>
-        <p> <a href="./book/book_0033.html">033. 느려도 좋아, 달라도 좋아</a> </p>
-        <p> <a href="./book/book_0032.html">032. 빅데이터를 지배하는 통계의 힘</a> </p>
-        <p> <a href="./book/book_0031.html">031. 당신이 있어 행복합니다</a> </p>
-        <p> <a href="./book/book_0030.html">030. 지적 대화를 위한 넓고 얕은 지식</a> </p>
-        <p> <a href="./book/book_0029.html">029. 데이터가 보인다</a> </p>
-        <p> <a href="./book/book_0028.html">028. 와우프로젝트</a> </p>
-        <p> <a href="./book/book_0027.html">027. 욱하는 성질 죽이기</a> </p>
-        <p> <a href="./book/book_0026.html">026. 백곰 심리학</a> </p>
-        <p> <a href="./book/book_0025.html">025. 치유의 인문학</a> </p>
-        <p> <a href="./book/book_0024.html">024. 고함쟁이 엄마</a> </p>
-        <p> <a href="./book/book_0023.html">023. 괴짜처럼 생각하라</a> </p>
-        <p> <a href="./book/book_0022.html">022. 사람을 읽는 힘 DiSC</a> </p>
-        <p> <a href="./book/book_0021.html">021. 위대한 개츠비</a> </p>
-        <p> <a href="./book/book_0020.html">020. When the Future Belongs</a> </p>
-        <p> <a href="./book/book_0019.html">019. 가족의 두 얼굴</a> </p>
-        <p> <a href="./book/book_0018.html">018. 평사원 리더</a> </p>
-        <p> <a href="./book/book_0017.html">017. 빚더미가 몰려온다</a> </p>
-        <p> <a href="./book/book_0016.html">016. 불황10년</a> </p>
-        <p> <a href="./book/book_0015.html">015. 신뢰의 속도</a> </p>
-        <p> <a href="./book/book_0014.html">014. 동물농장</a> </p>
-        <p> <a href="./book/book_0013.html">013. 목표관리&실행</a> </p>
-        <p> <a href="./book/book_0012.html">012. 경영학 콘서트</a> </p>
-        <p> <a href="./book/book_0011.html">011. 일본을 통해본 부동산 10년 대폭락 시나리오</a> </p>
-        <p> <a href="./book/book_0010.html">010. 육아는 과학이다</a> </p>
-        <p> <a href="./book/book_0009.html">009. 이코노미스트 2010 세계경제전망</a> </p>
-        <p> <a href="./book/book_0008.html">008. 세계에서 빈곤을 없애는 30가지 방법</a> </p>
-        <p> <a href="./book/book_0007.html">007. 경제성장이 안되면 우리는 풍요롭지 못할 것인가</a> </p>
-        <p> <a href="./book/book_0006.html">006. 망각의 힘</a> </p>
-        <p> <a href="./book/book_0005.html">005. 실용주의 프로그래머</a> </p>
-        <p> <a href="./book/book_0004.html">004. 커피와 샌드위치</a> </p>
-        <p> <a href="./book/book_0003.html">003. 성취심리</a> </p>
-        <p> <a href="./book/book_0002.html">002. 메모의 기술</a> </p>
-        <p> <a href="./book/book_0001.html">001. 칭찬은 고래를 춤추게 한다</a> </p>
     </div>
 
     <div> 
