--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> 23.05.01 50권/년 ^^ (now 124(6/12))</p>
+        <p> 23.05.01 50권/년 ^^ (now 124(6/12), 125(3/7))</p>
+        <p> <a href="./book/book_0125.html">125. 현명한 투자자 해제 (작성중)</a> </p>
         <p> <a href="./book/book_0124.html">124. 주식하는 마음 (작성중)</a> </p>
         <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd)</a> </p>
         <p> <a href="./book/book_0123.html">123. 거인의 어깨 2</a> </p>
