--- a/docu/docu_0013.html
+++ b/docu/docu_0013.html
@@ -83,6 +83,7 @@
 </ul>
 <p>내역</p>
 <ul>
+<li>삼프로 In-Depth30 한상희 (23.08.16)</li>
 <li>삼프로 In-Depth30 이현지 (23.08.14)</li>
 <li>삼프로 : 문홍철 (23.08.14)</li>
 <li>김작가 : 안유화 (23.08.07녹화, 더플로)</li>
@@ -95,6 +96,17 @@
 <li>김작가 : 빈센트 (23.07.31녹화) : 한 달 동안 변동된 내역 전반적인 설명 : 거시적 관점</li>
 <li>북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)</li>
 <li>김작가 : 박은정(23.07.19녹화)</li>
+</ul>
+<br>
+<h3 id="삼프로-in-depth30-한상희-230816"><strong>삼프로 In-Depth30 한상희 (23.08.16)</strong></h3>
+<ul>
+<li>7.12 나와서 현금 확보하라고 얘기 했음</li>
+<li>헬스케어, 제약, 음식료 등 증가  vs  가전, 가구 등 축소</li>
+<li>경기보다는 9월에 추가 금리 올리 것에 대한 우려 중</li>
+<li>파월의 임기 : 바이든이 목표 같을 듯 (내년 연말까지 금리 의미있는 하향)</li>
+<li>골디락스 : 경제 설명 어려울 때 그냥 하는 말 (떨어질 것 예상했는데 오를 때)</li>
+<li>잭슨홀미팅 : 작년 경험으로 주식 미리 빼고 있음, 7월에 했던 얘기랑 비슷하게 할 듯</li>
+<li>중국 : 외환보유고가 있기 때문에 위엔화 찍으면 됨 : 그렇게 되면 상당 기간 빌빌거릴 것임 : 리먼 사태처럼 가지 않을 듯</li>
 </ul>
 <br>
 <h3 id="삼프로-in-depth30-이현지-230814"><strong>삼프로 In-Depth30 이현지 (23.08.14)</strong></h3>
@@ -114,6 +126,7 @@
 </ul>
 </li>
 </ul>
+<br>
 <h3 id="삼프로--문홍철-230814"><strong>삼프로 : 문홍철 (23.08.14)</strong></h3>
 <ul>
 <li>장기금리는 미국 채무에 직접적인 영향 받음</li>
