--- a/study/study_0006.html
+++ b/study/study_0006.html
@@ -71,4 +71,22 @@
     <p data-ke-size="size16">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;연 1회 이상 SW 관리실태 점검</p>
     <p data-ke-size="size16">&nbsp; &nbsp; &nbsp; 소프트웨어 관리 규정 : 조달청고시 2007-10</p>
 
+    <br>
+    <h3 id="SW"><strong>SW자산관리사</strong></h3>
+    <p> <a href="./study_0001.html">0001. 0.소프트웨어 자산관리사 개괄 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0002.html">0002. 0.1 SW백문백답 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0003.html">0003. 1. 소프트웨어 일반 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0004.html">0004. 2. SW라이선스 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0005.html">0005. 2.X 주요기업 라이선스 정책 (작성중 2/6) (SW자산관리사)</a> </p>
+    <p> <a href="./study_0006.html">0006. 3.1 SW의 법적 보호 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0007.html">0007. 3.2 저작물과 저작자 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0008.html">0008. 3.3 저작권의 보호와 이용 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0009.html">0009. 3.4 저작권의 제한과 공정한 이용 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0010.html">0010. 3.5 저작권의 침해와 구제 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0011.html">0011. 4.1 소프트웨어 자산관리 일반 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0012.html">0012. 4.2 SAM의 구현 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0013.html">0013. 4.3 SAM 프로세스 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0014.html">0014. 4.4 SAM 라이프사이클 (SW자산관리사)</a> </p>
+    <p> <a href="./study_0015.html">0015. 4.5 SAM의 적용 서식 (SW자산관리사)</a> </p>
+
 </body>
