--- a/study/study_0001.html
+++ b/study/study_0001.html
@@ -49,7 +49,11 @@
     <p data-ke-size="size16">&nbsp; - 고사장 : 10명 착석 가능 : 1명 연기, 1명 불참, 2명 감독관</p>
     <p data-ke-size="size16">&nbsp; - 시험 공부가 부족하여 커트라인 이상이 목표</p>
     <p data-ke-size="size16">&nbsp; - 교재 연습문제에서 일부 나옴 : 이것 공부해 두면 커트라인 넘을 듯, 난 안했다는 것이 함정</p>    
-
+    <p data-ke-size="size16">&nbsp;</p>
+    <p data-ke-size="size16"><span style="color: #006dd7;"><b>갱신 (23.08)</b></span></p>
+    <p data-ke-size="size16">&nbsp; - 실제 회사에서 회계적인 처리 등과 관련된 문제가 많음 (무형자산 상각시 20년 초과 안됨 등) </p>
+    <p data-ke-size="size16">&nbsp; - 오픈북 형태임, 준비가 불필요할 정도</p>
+    
     <br>
     <h3 id="SW"><strong>SW자산관리사</strong></h3>
     <p> <a href="./study_0001.html">0001. 0.소프트웨어 자산관리사 개괄 (SW자산관리사)</a> </p>
