--- a/study/study_0002.html
+++ b/study/study_0002.html
@@ -26,21 +26,22 @@
     <p data-ke-size="size14"><span>&nbsp; </span>- 회사 내부적으로 사용할 경우에는 소스코드 공개 필요하지 않음 / 솔루션 사업을 한다면 심각한 문제 발생 가능</p>
     
     <h4 data-ke-size="size20">폰트 저작권 (5)</h4>
-    <p data-ke-size="size14"><span>&nbsp; </span>- pdf에 이미지 형태로 저장된 폰트는 사용 가능</p>
+    <p data-ke-size="size14"><span>&nbsp; </span>- pdf에 이미지 형태로 저장된 폰트는 사용 가능 (파일-속성-글꼴확인에서 확인 가능)</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 이미지 파일에 폰트 사용한 것만으로는 저작권 위반 아님 / AI, EPS 파일 형태로 전달 받은 경우 중대한 문제 발생 가능</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 블로그 등에서 무료폰트라고 적힌 것을 사용하더라도 저작권 내용 확인은 본인이 해야 함</p>
-    <p data-ke-size="size14"><span>&nbsp; </span>- 폰트 구매해서 CI 만드는데 활용 : 보통 별도 라이선스 존재함. (기업로고, 이러닝, e북, 영상, 게임 등)</p>
+    <p data-ke-size="size14"><span>&nbsp; </span>- 폰트 구매해서 BI, CI 만드는데 활용 : 보통 별도 라이선스 존재함. (기업로고, 이러닝, e북, 영상, 게임 등)</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 폰트는 미술저작물이 아니라 컴퓨터프로그램저작물로 보호됨</p>
 
     <h4 data-ke-size="size20">불법SW사용과 처벌근거 (4)</h4>
     <p data-ke-size="size14"><span>&nbsp; </span>- 불법 개발툴로 활용하여 만든 소프트웨어라도 저작권은 보호됨 (혹시 API. 등을 활용한 경우라면 해당 부분 제외)</p>
-    <p data-ke-size="size14"><span>&nbsp; </span>- 형사, 민사 소송 또는 한국저작권위원회에 조정 요청</p>
+    <p data-ke-size="size14"><span>&nbsp; </span>- 형사, 민사 소송 또는 한국저작권위원회에 조정 요청 (민사, 형사 동시 진행 가능)</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 처벌근거 : 제136조,<span>&nbsp;</span></p>
     <p data-ke-size="size14"><span>&nbsp; &nbsp; </span>. 제140조 원칙적으로는 친고죄, 하지만 상습적으로 행한 경우 비친고죄 적용 가능</p>
     <p data-ke-size="size14"><span>&nbsp; &nbsp; </span>. 제141조 양벌규정</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 저작권법 규정상 기업의 불법소프트웨어 사용은 친고죄로 처벌</p>
 
     <h4 data-ke-size="size20">양벌규정 (3)</h4>
+    <p data-ke-size="size14"><span>&nbsp; </span>- 침해자 외에도 법인을 함께 처벌할 수 있도록 한 것</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 퇴사한 직원의 PC도 저작권 침해</p>
     <p data-ke-size="size14"><span>&nbsp; </span>- 상당한 주의와 감독 의무 위반, 법인이 증명해야 함, 계약서/서약서 관리 정도로는 안됨</p>
 
