--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^ </p>
+        <p> <a href="./book/book_0126.html">126. 중학생 필독 시 (작성중) </a> </p>
         <p> <a href="./book/book_0125.html">125. 현명한 투자자 해제</a> </p>
         <p> <a href="./book/book_0124.html">124. 주식하는 마음</a> </p>
         <p> <a href="./book/book_0121.html">121. 거인의 어깨 1 (2nd)</a> </p>
@@ -48,7 +49,7 @@
         <p> <a href="./book/book_psychology.html">심리학</a> </p>
         <p> <a href="./book/book_poem.html">시</a> </p>
         <br>
-        <p> W 06.11 책15(100~114)</p>
+        <p> W 06.11 책15(100~114)</p> 
         <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a> </p>
         <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
         <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
