책126 파트1 작성완료

--- a/book/book_0126.html
+++ b/book/book_0126.html
@@ -78,6 +78,7 @@
         <h1 id="중학생-필독-시">중학생 필독 시</h1>
 <p>초판 1쇄 2008.08.01, 출판사:도서출판 타임기획, 편저:김혜니</p>
 <br>
+<h2 id="1908--1945년">1908 ~ 1945년</h2>
 <h3 id="해에게서-소년에게-최남선">해에게서 소년에게 (최남선)</h3>
 <ul>
 <li>해가 바다네</li>
@@ -153,7 +154,30 @@
 </li>
 </ul>
 <br>
-<h3 id="떠나가는-배-49">떠나가는 배 (49)</h3>
+<h3 id="깃발-유치환">깃발 (유치환)</h3>
+<ul>
+<li>애수 : 매음을 서그프게 하는 슬픈 시름</li>
+<li></li>
+<li>이것은 소리 없는 아우성</li>
+<li>저 푸른 해원을 향해 흔드는</li>
+<li>영원한 노스탤지어의 손수건.</li>
+<li>순정은 물결 같이 바람에 나부끼고</li>
+<li>오로지 맑고 곧은 이념의 푯대 끝에</li>
+<li>애수는 백로처럼 날개를 펴다.</li>
+<li>아! 누구인가?</li>
+<li>이렇게 슬프고도 애닮은 마음을</li>
+<li>맨 처음 공중에 달 줄은 안 그는</li>
+</ul>
+<br>
+<h3 id="낡은-집-이용악">낡은 집 (이용악)</h3>
+<ul>
+<li>북쪽을 향한 발자욱만 눈 위에 떨고 있었다.  :  야밤에 그 가족들은 북쪽으로 사라졌다</li>
+<li></li>
+<li>꽃피는 철이 와도 가도 뒤 울 안에</li>
+<li>꿀벌 하나 날아들지 않는다.                : 뭔지 모를 서글픔</li>
+</ul>
+<br>
+<h2 id="1945--1950년대">1945 ~ 1950년대</h2>
 
         
         
