--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^ </p>
+        <p> <a href="./book/book_0112.html">112. 피니시 (v4)###</a> </p>
         <p> <a href="./book/book_0126.html">126. 중학생 필독 시 (작성중) </a> </p>
         <p> <a href="./book/book_0125.html">125. 현명한 투자자 해제</a> </p>
         <p> <a href="./book/book_0124.html">124. 주식하는 마음</a> </p>
@@ -54,7 +55,6 @@
         <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
         <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
         <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
-        <p> <a href="./book/book_0112.html">112. 피니시 ###</a> </p>
         <p> <a href="./book/book_0111.html">111. 쫌 이상한 사람들</a> </p>
         <p> <a href="./book/book_0110.html">110. 새로운 가난이 온다</a> </p>
         <p> <a href="./book/book_0109.html">109. 함께 사는 세상 - 우리 아파트 이야기</a> </p>
