--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^ </p>
+        <p> <a href="./book/book_0127.html">127. 화가가 사랑한 나무들 </a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 (v4)###</a> </p>
         <p> <a href="./book/book_0126.html">126. 중학생 필독 시 (작성중) </a> </p>
         <p> <a href="./book/book_0125.html">125. 현명한 투자자 해제</a> </p>
@@ -54,24 +55,20 @@
         <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a> </p>
         <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
         <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
-        <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
         <p> <a href="./book/book_0111.html">111. 쫌 이상한 사람들</a> </p>
         <p> <a href="./book/book_0110.html">110. 새로운 가난이 온다</a> </p>
         <p> <a href="./book/book_0109.html">109. 함께 사는 세상 - 우리 아파트 이야기</a> </p>
-        <p> <a href="./book/book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
         <p> <a href="./book/book_0107.html">107. The ART of 소울</a> </p>
         <p> <a href="./book/book_0106.html">106. 김유정</a> </p>
         <p> <a href="./book/book_0105.html">105. 하케의 동물 이야기 ###</a> </p>
         <p> <a href="./book/book_0104.html">104. 오감도 권태</a> </p>
         <p> <a href="./book/book_0103.html">103. 그 많던 싱아는 누가 다 먹었을까</a> </p>
-        <p> <a href="./book/book_0102.html">102. 자제력 수업</a> </p>
         <p> <a href="./book/book_0101.html">101. 슬로리딩, 생각을 키우는 힘</a> </p>
         <p> <a href="./book/book_0100.html">100. 아들이 당신을 필요로 할 때</a> </p>
         <p> <a href="./book/book_0099.html">099. 슬로리딩 ###</a> </p>
         <p> <a href="./book/book_0098.html">098. 주머니 속의 가을</a> </p>
         <p> <a href="./book/book_0097.html">097. 잘했어요 노트 ###</a> </p>
         <p> <a href="./book/book_0096.html">096. 그림 그리는 새</a> </p>
-        <p> <a href="./book/book_0095.html">095. 자존감의 여섯 기둥</a> </p>
         <p> <a href="./book/book_0094.html">094. 논어, 직장인의 미래를 논하다</a> </p>
         <p> <a href="./book/book_0093.html">093. 내 여자의 열매</a> </p>
         <p> <a href="./book/book_0092.html">092. 나는 프로그래머다 2</a> </p>
@@ -112,12 +109,10 @@
         <p> <a href="./book/book_0057.html">057. 편의점 인간</a> </p>
         <p> <a href="./book/book_0056.html">056. 은색의 노래</a> </p>
         <p> <a href="./book/book_0055.html">055. 어린이를 위한 그리스 신화 교실</a> </p>
-        <p> <a href="./book/book_0054.html">054. 백석, 외롭고 높고 쓸쓸한</a> </p>
         <p> <a href="./book/book_0053.html">053. 엄마는 파업중</a> </p>
         <p> <a href="./book/book_0052.html">052. 보노보노처럼 살다니 다행이야</a> </p>
         <p> <a href="./book/book_0051.html">051. 행복도 선택이다</a> </p>
         <p> <a href="./book/book_0050.html">050. 82년생 김지영</a> </p>
-        <p> <a href="./book/book_0049.html">049. 난 빨강</a> </p>
         <p> <a href="./book/book_0048.html">048. 사람은 누구나 폭탄이다</a> </p>
         <p> <a href="./book/book_0047.html">047. 그렇습니까? 기린입니다.</a> </p>
         <p> <a href="./book/book_0046.html">046. 처음 인문학</a> </p>
@@ -139,15 +134,12 @@
         <p> <a href="./book/book_0030.html">030. 지적 대화를 위한 넓고 얕은 지식</a> </p>
         <p> <a href="./book/book_0029.html">029. 데이터가 보인다</a> </p>
         <p> <a href="./book/book_0028.html">028. 와우프로젝트</a> </p>
-        <p> <a href="./book/book_0027.html">027. 욱하는 성질 죽이기</a> </p>
-        <p> <a href="./book/book_0026.html">026. 백곰 심리학</a> </p>
         <p> <a href="./book/book_0025.html">025. 치유의 인문학</a> </p>
         <p> <a href="./book/book_0024.html">024. 고함쟁이 엄마</a> </p>
         <p> <a href="./book/book_0023.html">023. 괴짜처럼 생각하라</a> </p>
         <p> <a href="./book/book_0022.html">022. 사람을 읽는 힘 DiSC</a> </p>
         <p> <a href="./book/book_0021.html">021. 위대한 개츠비</a> </p>
         <p> <a href="./book/book_0020.html">020. When the Future Belongs</a> </p>
-        <p> <a href="./book/book_0019.html">019. 가족의 두 얼굴</a> </p>
         <p> <a href="./book/book_0018.html">018. 평사원 리더</a> </p>
         <p> <a href="./book/book_0017.html">017. 빚더미가 몰려온다</a> </p>
         <p> <a href="./book/book_0016.html">016. 불황10년</a> </p>
