--- a/study/study_0071.html
+++ b/study/study_0071.html
@@ -47,9 +47,42 @@
 <p>파이썬 3.6.5(18.03.26) 32bit 설치용 다운로드 설치 : add python path 체크 했음 : 32비트 / 64비트 확인 꼭
 파이참(pycharm) 설치</p>
 <p>print('hello python')</p>
+<h3 id="자료형">자료형</h3>
+<ul>
+<li>숫자형
+<ul>
+<li>정수</li>
+<li>실수 : 1.2, 4.2e-10 (e 또는 E, 10진수임)</li>
+<li>8진수 : 0o (o 또는 O)</li>
+<li>16진수 : 0x (x 또는 X)</li>
+<li>사칙연산(산술연산자)
+<ul>
+<li>4칙연산(+,-,*,/), **(지수), //(몫), %(나머지)</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>문자열
+<ul>
+<li>큰따옴표, 작은따옴표 외에 큰따옴표3개, 작은따옴표3개로도 가능</li>
+<li>&quot;Python's favorite food is perl&quot;</li>
+<li>'Python's favorite food is perl'</li>
+<li>이스케이프 코드 : <strong>n, t, , ', &quot;</strong>, r, f, a, b, 000</li>
+<li>연산 (+,*) : *는 반복횟수 print(&quot;=&quot;*10)</li>
+<li>인덱싱</li>
+<li>슬라이싱</li>
+<li>포맷팅</li>
+</ul>
+</li>
+<li>리스트</li>
+<li>튜플</li>
+<li>딕셔너리</li>
+<li>집합</li>
+<li>불린</li>
+<li>자료형의 값을 저장하는 공간, 변수</li>
+</ul>
 <p>함수와 데이터(변수)</p>
 <p>연산자 : 산술, 관계, 논리</p>
-<p>산술연산자 : 4칙연산, **(지수), //(몫), %(나머지)</p>
 <p>관계연산자 : &gt;, &gt;=, &lt;, &lt;=, ==, !=</p>
 <p>논리연산자 : and or not (단어로 표시됨)</p>
 <p>파이썬 들여쓰기 중요하게 생각함 (첫번째 컬럼부터 적어야만 함 -&gt; 그렇지않으면, Error 발생시킴)</p>
