책 공정하다는 착각

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> 23.05.01 50권/년 ^^ </p>
+        <p> 23.05.01 50권/년 ^^ </p>       
+        <p> <a href="./book/book_0128.html">128. 10대를 위한 공정하다는 착각</a> </p>
         <p> <a href="./book/book_0127.html">127. 화가가 사랑한 나무들 </a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 (v4)###</a> </p>
         <p> <a href="./book/book_0126.html">126. 중학생 필독 시 (작성중) </a> </p>
