--- a/book/book_0129.html
+++ b/book/book_0129.html
@@ -81,10 +81,10 @@
 <h3 id="머리말"><strong>머리말</strong></h3>
 <p>009 과거에 확실했던 것을 폐기하고 그 잿더미 위에 새로이 구축</p>
 <p>013 자동화는 오랫동안 단지 저숙련 노동자에 대한 위협으로만 간주되어왔으나, 이제는 점차 모든 예측 가능한 일 (의학적 이미지 해석, 법률적 조사 등)</p>
-<p>013 테크놀리지의 파고 아래에서 곧 사라지고 말 지업에 대비시키는 교육을 이어갈 것이 아니라, 스스로의 미래를 개척할 수 있는 주인 의식을 심어주어야 한다</p>
+<p>013 테크놀리지의 파고 아래에서 곧 사라지고 말 직업에 대비시키는 교육을 이어갈 것이 아니라, 스스로의 미래를 개척할 수 있는 주인 의식을 심어주어야 한다</p>
 <p>015 여전히 교육은 사람들이 좀더 높은 경제적 서열로 올라가도록 돕는 사다리로 남아 있을 것이다</p>
 <p>015 임금과 생산성이 높은 직종의 수는 점차 줄어드는 데 반해 세계적으로 노동력의 공급은 줄곧 늘어나고 있기 때문이다 (사회적 문제 지속 증가)</p>
-<p>015 테크놀리지 기업의 관련 기업의 눈부신 노동 생산성 : 구글 6만명 vs GM 전성기 60만명 고용</p>
+<p>015 테크놀리지 관련 기업의 눈부신 노동 생산성 : 구글 6만명 vs GM 전성기 60만명 고용</p>
 <p>016 임시직 경제 (플랫폼) : 한계가 뚜렷하다. 전일제 직업 대체 안됨</p>
 <p>017 (대학은 학생들을 창조자로 이끌어야 한다고 믿는다) 창조는 경제 활동의 주춧돌이 되고, 미래에 인간이 하게 될 일의 상당 부분 차지할 것이다</p>
 <p>017 탐험을 통해 <strong>발견</strong>이라는 경과 마주하는 것은 오롯이 인간의 몫이다</p>
@@ -105,8 +105,25 @@
 </ul>
 <br>
 <h3 id="1-로봇이-열어가는-미래에-대한-두려움"><strong>1. 로봇이 열어가는 미래에 대한 두려움</strong></h3>
+<p>026 테크놀리지가 우리의 노동 역량을 키워줌에 따라 노동의 속성 또한 달리지고 있다</p>
+<p>029 노팅엄 : 양말공장에 기계 도입</p>
+<ul>
+<li>숙련공들은 고도로 개발된, 하지만 시장이 더 이상 필요로 하지 않는 매우 특수한 일련의 기술 보유</li>
+<li>러다이트 운동 -&gt; 군대까지 동원하여 대응, 기계파괴방지법 제정</li>
+<li>기술적 실업 : 사람들은 언제나 자신의 교육을 향상하는 식으로 대응</li>
+</ul>
+<p>041 대부분의 분석은 고용이 점차 줄어들 거라는 결론</p>
+<p>043 세계 무역은 점차 활력을 잃어가고 있으며 무자비하게 확장되기만 하던 기세도 다소 주춤한 듯하다</p>
+<p>044 새로운 직종의 상당 부분은 광범위한 훈련을 요구하는 고임금 전문직이거나 아니면 저임금 시간제 직종이었다</p>
+<p>045 (플랫폼 노동자) 자활하기에 충분한 돈을 벌고 있지는 못하다</p>
+<p>045 저숙련직이 사라지면서 경제가 더욱 복잡해지고 그러한 경제를 작동시키는 일도 한층 까다로워졌으므로 이렇듯 위로 열린 길을 밟아나가는 것이 향상 가능했다.</p>
+<ul>
+<li>종전과 달리 테크놀리지가 폭발적 발전 -&gt; 교육에 대한 의존도 점차 커짐</li>
+</ul>
+<p>046 대학 4년만 투자하면 안정적인 중산층 가능했지만 더 이상 유효하지 않다</p>
+<p>049 우리에게는 사람들이 일평생 배움을 이어감으로써 기계가 하지 못하는 일을 할 수 있는 능력을 길러주는 교육이 필요하다</p>
 <br>
-<h3 id="2-고위-경영진의-관점--고용주들이-원하는-것">2. 고위 경영진의 관점 : 고용주들이 원하는 것</h3>
+<h3 id="2-고위-경영진의-관점--고용주들이-원하는-것"><strong>2. 고위 경영진의 관점 : 고용주들이 원하는 것</strong></h3>
 <br>
 <h3 id="3-인간학--미래를-준비하는-학습-모델">3. 인간학 : 미래를 준비하는 학습 모델</h3>
 <br>
